docs: create documentation Category
