# app/Http/Controllers/Api/Member/CategoryController.php
@@ -12,6 +12,32 @@ use App\Services\CategoryService;
 use Illuminate\Http\Response;
 use Illuminate\Http\Request;
 
+/**
+ * @OA\Schema(
+ *     schema="StoreUpdateCategoryRequest",
+ *     type="object",
+ *     required={"name", "description", "elegant_font"},
+ *     @OA\Property(
+ *         property="name",
+ *         type="string",
+ *         description="Name of the category",
+ *         example="Science"
+ *     ),
+ *     @OA\Property(
+ *         property="description",
+ *         type="string",
+ *         description="Description of the category",
+ *         example="Courses related to scientific subjects"
+ *     ),
+ *     @OA\Property(
+ *         property="elegant_font",
+ *         type="string",
+ *         description="Elegant font associated with the category",
+ *         example="Serif"
+ *     )
+ * )
+ */
+
 class CategoryController extends Controller
 {
     public function __construct(
@@ -19,8 +45,69 @@ class CategoryController extends Controller
     ) {
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/categories",
+     *     summary="Get a paginated list of categories",
+     *     description="Returns a paginated list of categories based on the provided query parameters.",
+     *     operationId="getAllCategories",
+     *     tags={"Categories"},
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         description="Current page number",
+     *         required=false,
+     *         @OA\Schema(type="integer", default=1)
+     *     ),
+     *     @OA\Parameter(
+     *         name="per_page",
+     *         in="query",
+     *         description="Number of items per page",
+     *         required=false,
+     *         @OA\Schema(type="integer", default=15)
+     *     ),
+     *     @OA\Parameter(
+     *         name="filter",
+     *         in="query",
+     *         description="Additional filter for searching categories",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Paginated list of categories",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(ref="#/components/schemas/Category")
+     *             ),
+     *             @OA\Property(
+     *                 property="meta",
+     *                 type="object",
+     *                 @OA\Property(property="current_page", type="integer"),
+     *                 @OA\Property(property="from", type="integer"),
+     *                 @OA\Property(property="last_page", type="integer"),
+     *                 @OA\Property(property="path", type="string"),
+     *                 @OA\Property(property="per_page", type="integer"),
+     *                 @OA\Property(property="to", type="integer"),
+     *                 @OA\Property(property="total", type="integer")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid request"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Server error"
+     *     )
+     * )
+     */
 
-    public function index(Request $request)
+    public function getAllCategories(Request $request)
     {
         $Category = $this->categoryService->paginate(
             page: $request->get('page', 1),
@@ -31,7 +118,42 @@ class CategoryController extends Controller
         return ApiAdapter::paginateToJson($Category);
     }
 
-    public function show(string $id)
+    /**
+     * @OA\Get(
+     *     path="/api/categories/{categoryId}",
+     *     summary="Get category by ID",
+     *     description="Returns a category based on the provided ID.",
+     *     operationId="getCategoryById",
+     *     tags={"Categories"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the category",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Category found",
+     *         @OA\JsonContent(ref="#/components/schemas/Category")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Category not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="error",
+     *                 type="string",
+     *                 example="Not Found"
+     *             )
+     *         )
+     *     )
+     * )
+     */
+
+
+    public function getCategoryById(string $id)
     {
         if (!$Category = $this->categoryService->findOne($id)) {
             return response()->json([
@@ -41,18 +163,43 @@ class CategoryController extends Controller
         return new CategoryResource($Category);
     }
 
-    public function edit(string $id)
-    {
-        $Category = $this->categoryService->findOne($id);
+    /**
+     * @OA\Post(
+     *     path="/api/categories",
+     *     summary="Create a new category",
+     *     description="Creates a new category based on the provided data.",
+     *     operationId="storeCategory",
+     *     tags={"Categories"},
+     *     @OA\RequestBody(
+     *         description="Category data",
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/StoreUpdateCategoryRequest")
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Category created",
+     *         @OA\JsonContent(ref="#/components/schemas/Category")
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="error",
+     *                 type="string",
+     *                 example="Invalid input data"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Server error"
+     *     )
+     * )
+     */
 
-        if (!$Category) {
-            return response()->json(['error' => 'Resource not found'], Response::HTTP_NOT_FOUND);
-        }
-
-        return new CategoryResource($Category);
-    }
-
-    public function store(StoreUpdateCategoryRequest $request)
+    public function storeCategory(StoreUpdateCategoryRequest $request)
     {
         $Category = $this->categoryService->new(
             CreateCategoryDTO::makeFromRequest($request)
@@ -61,7 +208,62 @@ class CategoryController extends Controller
         return new CategoryResource($Category);
     }
 
-    public function update(StoreUpdateCategoryRequest $request, string $id)
+    /**
+     * @OA\Put(
+     *     path="/api/categories/{Id}",
+     *     summary="Update a category",
+     *     description="Updates a category based on the provided data.",
+     *     operationId="updateCategory",
+     *     tags={"Categories"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the category",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\RequestBody(
+     *         description="Category data",
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/StoreUpdateCategoryRequest")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Category updated",
+     *         @OA\JsonContent(ref="#/components/schemas/Category")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Category not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="error",
+     *                 type="string",
+     *                 example="Not Found"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="error",
+     *                 type="string",
+     *                 example="Invalid input data"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Server error"
+     *     )
+     * )
+     */
+
+    public function updateCategory(StoreUpdateCategoryRequest $request, string $id)
     {
         $Category = $this->categoryService->update(
             UpdateCategoryDTO::makeFromRequest($request, $id)
@@ -76,7 +278,44 @@ class CategoryController extends Controller
         return new CategoryResource($Category);
     }
 
-    public function destroy(string $id)
+    /**
+     * @OA\Delete(
+     *     path="/api/categories/{Id}",
+     *     summary="Delete a category",
+     *     description="Deletes a category based on the provided ID.",
+     *     operationId="destroyCategory",
+     *     tags={"Categories"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the category",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="Category deleted"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Category not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="error",
+     *                 type="string",
+     *                 example="Not Found"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Server error"
+     *     )
+     * )
+     */
+
+    public function destroyCategory(string $id)
     {
         if (!$this->categoryService->findOne($id)) {
             return response()->json([
